--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Anagram Helper</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
   </head>
   <body>
     <div>
@@ -20,7 +19,9 @@
         <h1></h1>
         <h1 id="info"></h1>
         <br />
+        <h1 id="effect"></h1>
       </form>
     </div>
   </body>
+  <script src="main.js"></script>
 </html>
