--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       Anagram helper
     </h1>
     <div class="card mt-5">
-      <div class="card-body">Input word: <span id="demo"></span></div>
+      <div class="card-body">Word: <span id="demo"></span></div>
     </div>
 
     <!-- Input row-->
@@ -25,7 +25,7 @@
       <div class="col">
         <div class="input-group">
           <div class="input-group-append input-group-prepend">
-            <span class="input-group-text">Input word here: </span>
+            <span class="input-group-text">Input word: </span>
           </div>
           <input class="form-control" type="text" id="inputWord" value="" oninput="getInputWord()" autocomplete="off" />
         </div>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="card mt-5">
-      <div class="card-body">Letters does not exits: <span id="info"></span></div>
+      <div class="card-body">Characters not available: <span id="info"></span></div>
     </div>
 
 
