placeholder for inputfield

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="input-group-append input-group-prepend">
             <span class="input-group-text">Input word: </span>
           </div>
-          <input class="form-control" type="text" id="inputWord" value="" oninput="getInputWord()" autocomplete="off" />
+          <input class="form-control" type="text" id="inputWord" value="" oninput="getInputWord()" autocomplete="off" placeholder="e.g. anonymous"/>
         </div>
         
       </br>
@@ -35,7 +35,7 @@
           <div class="input-group-append input-group-prepend">
             <span class="input-group-text">Anagram: </span>
           </div>
-          <input class="form-control" type="text" id="inputText" value="" oninput="highlight()" autocomplete="off" />
+          <input class="form-control" type="text" id="inputText" value="" oninput="highlight()" autocomplete="off" placeholder="asunymoon"/>
         </div>
       </div>
 
@@ -44,10 +44,8 @@
     <div class="card mt-5">
       <div class="card-body">Characters not available: <span id="info"></span></div>
     </div>
-
-
+  
   </div>
 </body>
 <script src="main.js"></script>
-
 </html>
