--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="input-group-append input-group-prepend">
             <span class="input-group-text">Anagram: </span>
           </div>
-          <input class="form-control" type="text" id="inputText" value="" oninput="highlight()" autocomplete="off" placeholder="asunymoon"/>
+          <input class="form-control" type="text" id="inputText" value="" oninput="highlight()" autocomplete="off" placeholder="a suny moon"/>
         </div>
       </div>
 
